Fixed Text Readability

--- a/src/components/FloatingCards.css
+++ b/src/components/FloatingCards.css
@@ -178,7 +178,8 @@
     font-size: 2em;
     margin-bottom: 10px;
     font-family: Inter, sans-serif;
-    color: #721e02;
+    color: #fff;
+    text-shadow:  0 0 10px rgba(0, 0, 0, 0.4);
 }
 
 .container .box .content p
@@ -187,7 +188,8 @@
     margin-bottom: 10px;
     line-height: 1.4em;
     font-family: Inter, sans-serif;
-    color: #721e02;
+    color: #fff;
+    text-shadow: 0 0 12px rgba(0, 0, 0, 1);
 }
 
 .container .box .content a
